# stacks

./: .gitignore  README.md  pyproject.toml
maps/: index.html
scripts/: backup-db.sh  ingest-all.sh  ollama-start.sh  setup.sh  wiki-ingest.sh
src/stacks/: chunker.py  cli.py  config.py  extract.py  maps_server.py  rag.py  store.py  wiki.py
