[project]
name = "stacks"
version = "0.1.0"
description = "Local knowledgebase with semantic search and RAG"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.0",
    "llama-cpp-python>=0.3.0",
    "ebooklib>=0.18",
    "pymupdf>=1.25.0",
    "mobi>=0.3.3",
    "html2text>=2024.2.26",
    "rich>=13.0.0",
    "click>=8.1.0",
    "mwparserfromhell>=0.6.6",
]

[project.scripts]
stacks = "stacks.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
